5.1.4/broker.md
|key|value|important|description|
|---|---|---|---|
|accessMessageInMemoryHotRatio|26|||
|accessMessageInMemoryMaxRatio|40|y||
|accountStatsEnable|true|||
|accountStatsPrintZeroValues|true|||
|ackMessageThreadPoolNums|3|||
|ackThreadPoolQueueCapacity|100000|||
|aclEnable|false|y||
|adminBrokerThreadPoolNums|16|||
|adminBrokerThreadPoolQueueCapacity|10000|||
|allAckInSyncStateSet|false|y||
|asyncLearner|false|||
|asyncSendEnable|true|||
|autoCreateSubscriptionGroup|true|y||
|autoCreateTopicEnable|true|y||
|autoDeleteUnusedStats|false|||
|autoMessageVersionOnTopicLen|true|||
|batchDispatchRequestThreadPoolNums|16|||
|bitMapLengthConsumeQueueExt|64|||
|broadcastOffsetExpireMaxSecond|300|||
|broadcastOffsetExpireSecond|120|||
|brokerConfigPath||||
|brokerElectionPriority|2147483647|||
|brokerFastFailureEnable|true|||
|brokerHeartbeatInterval|1000|||
|brokerIP1||y||
|brokerIP2||||
|brokerNotActiveTimeoutMillis|10000|||
|brokerPermission|6|||
|brokerRole|ASYNC_MASTER|y||
|brokerTopicEnable|true|||
|cgColdReadThreshold|3145728|||
|channelExpiredTimeout|120000|||
|checkCRCOnRecover|true|||
|checkSyncStateSetPeriod|5000|||
|cleanFileForciblyEnable|true|y||
|cleanOfflineBrokerInterval|30000|||
|cleanResourceInterval|10000|||
|cleanSwapedMapInterval|300000|||
|clientManageThreadPoolNums|32|||
|clientManagerThreadPoolQueueCapacity|1000000|||
|clusterTopicEnable|true|||
|coldCtrStrategyEnable|false|||
|coldDataFlowControlEnable|false|||
|coldDataScanEnable|false|||
|commercialBaseCount|1|||
|commercialSizePerMsg|4096|||
|commitCommitLogLeastPages|4|||
|commitCommitLogThoroughInterval|200|||
|commitIntervalCommitLog|200|y||
|commitLogForceSwapMapInterval|43200000|||
|commitLogSwapMapInterval|3600000|||
|commitLogSwapMapReserveFileNum|100|||
|compactionCqMappedFileSize|10485760|||
|compactionMappedFileSize|104857600|||
|compactionScheduleInternal|900000|||
|compactionThreadNum|6|||
|compatibleWithOldNameSrv|true|||
|compressedRegister|false|||
|consumerFallbehindThreshold|17179869184|||
|consumerManageThreadPoolNums|32|||
|consumerManagerThreadPoolQueueCapacity|1000000|||
|consumerOffsetUpdateVersionStep|500|||
|controllerAddr||||
|controllerHeartBeatTimeoutMills|10000|||
|correctLogicMinOffsetForceInterval|300000|||
|correctLogicMinOffsetSleepInterval|1|||
|dataReadAheadEnable|true|||
|debugLockEnable|false|||
|defaultMessageRequestMode|PULL|||
|defaultPopShareQueueNum|-1|||
|defaultQueryMaxNum|32|||
|defaultTopicQueueNums|8|||
|delayOffsetUpdateVersionStep|200|||
|deleteCommitLogFilesInterval|100|||
|deleteConsumeQueueFilesInterval|100|||
|deleteFileBatchMax|10|y||
|deleteWhen|04|y||
|destroyMapedFileIntervalForcibly|120000|||
|disableConsumeIfConsumerReadSlowly|false|||
|disappearTimeAfterStart|-1|y||
|diskFallRecorded|true|||
|diskMaxUsedSpaceRatio|75|||
|diskSpaceCleanForciblyRatio|85|||
|diskSpaceWarningLevelRatio|90|||
|dispatchCqCacheNum|4096|||
|dispatchCqThreads|10|||
|dispatchFromSenderThread|false|y||
|duplicationEnable|false|||
|enableAsyncReput|true|||
|enableAutoInSyncReplicas|false|y||
|enableBatchPush|false|||
|enableBroadcastOffsetStore|true|||
|enableBuildConsumeQueueConcurrently|false|||
|enableCalcFilterBitMap|false|||
|enableCleanExpiredOffset|false|y||
|enableCompaction|true|||
|enableConsumeQueueExt|false|||
|enableControllerMode|false|||
|enableDLegerCommitLog|false|||
|enableDetailStat|true|||
|enableLmq|false|||
|enableMixedMessageType|false|||
|enableMultiDispatch|false|||
|enableNetWorkFlowControl|false|||
|enableNotifyAfterPopOrderLockRelease|true|||
|enablePopBatchAck|false|||
|enablePopBufferMerge|false|||
|enablePopLog|false|||
|enablePropertyFilter|false|||
|enableRemoteEscape|false|||
|enableRocksDBLog|false|||
|enableScheduleAsyncDeliver|false|||
|enableScheduleMessageStats|true|||
|enableSingleTopicRegister|false|||
|enableSkipLongAwaitingAck|false|||
|enableSlaveActingMaster|false|||
|enableSplitRegistration|false|||
|endTransactionPoolQueueCapacity|100000|||
|endTransactionThreadPoolNums|16|||
|estimateAccumulation|true|||
|expectConsumerNumUseFilter|32|||
|fastFailIfNoBufferInStorePool|false|||
|fetchControllerAddrByDnsLookup|false|||
|fetchNameSrvAddrByDnsLookup|false|y||
|fetchNamesrvAddrByAddressServer|false|y||
|fetchNamesrvAddrInterval|10000|||
|fileReservedTime|72|y||
|filterDataCleanTimeSpan|86400000|||
|filterSupportRetry|false|||
|flushCommitLogLeastPages|4|||
|flushCommitLogThoroughInterval|10000|||
|flushCommitLogTimed|true|y||
|flushConsumeQueueLeastPages|2|||
|flushConsumeQueueThoroughInterval|60000|||
|flushConsumerOffsetHistoryInterval|60000|||
|flushConsumerOffsetInterval|5000|||
|flushDelayOffsetInterval|10000|||
|flushDiskType|ASYNC_FLUSH|y||
|flushIntervalCommitLog|500|y||
|flushIntervalConsumeQueue|1000|||
|flushLeastPagesWhenWarmMapedFile|4096|||
|forceRegister|true|||
|forwardTimeout|3000|||
|globalColdReadThreshold|104857600|||
|haFlowControlEnable|false|y||
|haHousekeepingInterval|20000|||
|haListenPort|10912|||
|haMasterAddress||y||
|haMaxGapNotInSync|268435456|||
|haMaxTimeSlaveNotCatchup|15000|||
|haSendHeartbeatInterval|5000|||
|haTransferBatchSize|32768|||
|heartbeatThreadPoolNums|4||Math.min(32, PROCESSOR_NUMBER)|
|heartbeatThreadPoolQueueCapacity|50000|||
|highSpeedMode|false|||
|inSyncReplicas|1|y||
|initPopOffsetByCheckMsgInMem|true|||
|isolateLogEnable|false|||
|listenPort|6888|y||
|litePullMessageEnable|true|||
|litePullMessageThreadPoolNums|24||16 + PROCESSOR_NUMBER * 2|
|litePullThreadPoolQueueCapacity|100000|||
|loadBalancePollNameServerInterval|30000|||
|loadBalanceProcessorThreadPoolNums|32|||
|loadBalanceThreadPoolQueueCapacity|100000|||
|lockInStrictMode|false|||
|logicQueueForceSwapMapInterval|43200000|||
|logicQueueSwapMapInterval|3600000|||
|logicQueueSwapMapReserveFileNum|20|||
|logicalDiskSpaceCleanForciblyThreshold|0.8|||
|longPollingEnable|true|||
|mappedFileSizeCommitLog|1073741824|||
|mappedFileSizeConsumeQueue|6000000|||
|mappedFileSizeConsumeQueueExt|50331648|||
|mappedFileSizeTimerLog|104857600|||
|mappedFileSwapEnable|true|||
|mapperFileSizeBatchConsumeQueue|13800000|||
|maxAsyncPutMessageRequests|5000|||
|maxBatchDeleteFilesNum|50|||
|maxChecksumRange|1073741824|||
|maxConsumeQueueScan|20000|||
|maxErrorRateOfBloomFilter|20|||
|maxHaTransferByteInSecond|104857600|||
|maxHashSlotNum|5000000|||
|maxIndexNum|20000000|||
|maxLmqConsumeQueueNum|20000|||
|maxMessageSize|4194304|||
|maxMsgsNumBatch|64|||
|maxOffsetMapSize|104857600|||
|maxPopPollingSize|100000|||
|maxRecoveryCommitlogFiles|30|||
|maxSlaveResendLength|268435456|||
|maxTopicLength|127|||
|maxTransferBytesOnMessageInDisk|65536|y||
|maxTransferBytesOnMessageInMemory|262144|y||
|maxTransferCountOnMessageInDisk|8|y||
|maxTransferCountOnMessageInMemory|32|y||
|memTableFlushInterval|3600000|||
|messageDelayLevel|1s 5s 10s 30s 1m 2m 3m 4m 5m 6m 7m 8m 9m 10m 20m 30m 1h 2h|||
|messageIndexEnable|true|y||
|messageIndexSafe|false|y||
|messageStorePlugIn||||
|metricGrpcExporterIntervalInMills|60000|||
|metricGrpcExporterTimeOutInMills|3000|||
|metricLoggingExporterIntervalInMills|10000|||
|metricsExporterType|DISABLE|||
|metricsGrpcExporterHeader||||
|metricsGrpcExporterTarget||||
|metricsInDelta|false|||
|metricsLabel||||
|metricsOtelCardinalityLimit|50000|||
|metricsPromExporterHost||||
|metricsPromExporterPort|5557|||
|minInSyncReplicas|1|y||
|msgTraceTopicName|RMQ_SYS_TRACE_TOPIC|y||
|namesrvAddr||y||
|notifyConsumerIdsChangedEnable|true|||
|offsetCheckInSlave|false|||
|osPageCacheBusyTimeOutMills|1000|||
|popCkMaxBufferSize|200000|||
|popCkOffsetMaxQueueSize|20000|||
|popCkStayBufferTime|10000|||
|popCkStayBufferTimeOut|3000|||
|popPollingMapSize|100000|||
|popPollingSize|1024|||
|popResponseReturnActualRetryTopic|false|||
|preferredLeaderId||||
|processReplyMessageThreadPoolNums|24||16 + PROCESSOR_NUMBER * 2|
|pullBatchMaxMessageCount|160|||
|pullMessageThreadPoolNums|24||16 + PROCESSOR_NUMBER * 2|
|pullThreadPoolQueueCapacity|100000|||
|putMessageFutureThreadPoolNums|4||Math.min(PROCESSOR_NUMBER, 4)|
|putMessageTimeout|8000|||
|putMsgIndexHightWater|600000|||
|putThreadPoolQueueCapacity|10000|||
|queryMessageThreadPoolNums|12||8 + PROCESSOR_NUMBER|
|queryThreadPoolQueueCapacity|20000|||
|readOnlyCommitLogStorePaths||||
|realTimeNotifyConsumerChange|true|||
|realTimePersistRocksDBConfig|true|||
|recheckReputOffsetFromCq|false|||
|recoverConcurrently|false|y||
|recoverThreadPoolNums|32|||
|redeleteHangedFileInterval|120000|||
|regionId|DefaultRegion|||
|registerBrokerTimeoutMills|24000|||
|registerNameServerPeriod|30000|||
|rejectPullConsumerEnable|false|||
|rejectTransactionMessage|false|y||
|replicasPerDiskPartition|1|||
|replyThreadPoolQueueCapacity|10000|||
|reviveAckWaitMs|180000|||
|reviveInterval|1000|||
|reviveMaxSlow|3|||
|reviveQueueNum|8|||
|reviveScanTime|10000|||
|rocketmqHome|${ROCKETMQ_HOME}|||
|sampleCountThreshold|5000|||
|sampleSteps|32|||
|scheduleAsyncDeliverMaxPendingLimit|2000|||
|scheduleAsyncDeliverMaxResendNum2Blocked|3|||
|searchBcqByCacheEnable|true|||
|sendHeartbeatTimeoutMillis|1000|||
|sendMessageThreadPoolNums|4||Math.min(PROCESSOR_NUMBER, 4)|
|sendThreadPoolQueueCapacity|10000|||
|serverLoadBalancerEnable|true|||
|shortPollingTimeMills|1000|||
|skipPreOnline|false|||
|slaveReadEnable|false|||
|slaveTimeout|3000|||
|splitRegistrationSize|800|||
|startAcceptSendRequestTimeStamp|0|||
|storePathBrokerIdentity||y||
|storePathCommitLog||y||
|storePathDLedgerCommitLog||y||
|storePathEpochFile||y||
|storePathRootDir|${user.home}/store|y||
|storeReplyMessageEnable|true|||
|storeType|default|y||
|subscriptionExpiredTimeout|600000|||
|syncBrokerMemberGroupPeriod|1000|||
|syncBrokerMetadataPeriod|5000|||
|syncControllerMetadataPeriod|10000|||
|syncFlushTimeout|5000|||
|syncFromLastFile|false|||
|syncMasterFlushOffsetWhenStartup|false|||
|timerColdDataCheckIntervalMs|60000|||
|timerCongestNumEachSlot|2147483647|||
|timerEnableCheckMetrics|true|||
|timerFlushIntervalMs|1000|||
|timerGetMessageThreadNum|3|||
|timerInterceptDelayLevel|false|||
|timerMaxDelaySec|259200|||
|timerMetricSmallThreshold|1000000|||
|timerPrecisionMs|1000|||
|timerProgressLogIntervalMs|10000|||
|timerPutMessageThreadNum|3|||
|timerRollWindowSlot|172800|||
|timerStopEnqueue|false|||
|timerWheelEnable|true|||
|topicQueueLockNum|32|||
|totalReplicas|1|y||
|traceOn|true|||
|traceTopicEnable|false|y||
|transactionCheckInterval|30000|y||
|transactionCheckMax|15|y||
|transactionOpBatchInterval|3000|||
|transactionOpMsgMaxSize|4096|||
|transactionTimeOut|6000|y||
|transferMsgByHeap|true|||
|transientStorePoolEnable|false|y||
|transientStorePoolSize|5|||
|travelCqFileNumWhenGetMessage|1|||
|usePIDColdCtrStrategy|true|||
|useReentrantLockWhenPutMessage|true|||
|useServerSideResetOffset|false|||
|useStaticSubscription|false|||
|validateSystemTopicWhenUpdateTopic|true|||
|waitTimeMillsInAckQueue|3000|||
|waitTimeMillsInHeartbeatQueue|31000|||
|waitTimeMillsInLitePullQueue|5000|||
|waitTimeMillsInPullQueue|5000|||
|waitTimeMillsInSendQueue|200|||
|waitTimeMillsInTransactionQueue|3000|||
|wakeCommitWhenPutMessage|true|y||
|wakeFlushWhenPutMessage|false|y||
|warmMapedFileEnable|false|||
